Roundcube Webmail CopyMessage
=============================

2010 03 20
==========
 * Copy function in core after r3385

2010 02 21
==========
 * Update after r3258
 * Better action name

2010 01 03
==========
 * Add de_*

2009 12 19
==========
 * First version